# meccano

./: .gitignore  .pre-commit-config.yaml  README.md  docker-compose.yml  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.github/chatmodes/: beast_mode.md.chatmode.md
.github/workflows/: python-tests.yml
MeccanoWB/: Init.py  InitGui.py  MeccanoTools.py
meccano/: __init__.py  sketch_geometry.py
meccano/pieces/: __init_.py  __init__.py  fasteners.py  flat_strip.py  l_shaped.py  planar.py  spring.py
meccanoWB/: commands.py  initGUI.py
test/: all_test.py  conftest.py  fasteners_test.py  l_shaped_test.py  linear_test.py  spring_test.py
tests/: all_test.py  conftest.py
