[project]
name = "meccano"
version = "0.1.0"
description = "A Python library for modeling and generating mechanical pieces inspired by the Meccano system."
readme = "README.md"
authors = [
    { name = "Matteo", email = "matteo.giani.87@gmail.com" },
]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11"
]
keywords = ["meccano", "mechanical", "3d-modeling", "freecad", "python"]
requires-python = ">=3.11"
dependencies = [
# freecad
]

[dependency-groups]
test = ["pytest"]
dev = [
    "pre-commit",
    "ruff",
    "black",
    "isort"
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["meccano*"]